--- a/src/_base/layout.html
+++ b/src/_base/layout.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
     {% include './app-meta.html' %}
-    <script src="/assets/js/vendor/loadcss.js" ></script>
-    <!-- <link href="/assets/css/criticalCSS.css" as="style"> -->
-    <style>{% include '../dist/css/critical.css' %}</style>
-        <script>
-                loadCSS('/dist/css/fonts.css');
-                // loadCSS('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
-                // loadCSS('/assets/css/src/docs.css');
-        </script>
 
-        <noscript>
-            <link rel="preload" href="/dist/css/fonts.css" as="style">
-            <!-- <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style"> -->
-            <!-- <link rel="preload" href="/assets/css/src/docs.css" as="style"> -->
-        </noscript>
+    <style>{% include '../dist/css/critical.css' %}</style>
+    <script>loadCSS('/dist/css/fonts.css');</script>
+    <noscript><link rel="preload" href="/dist/css/fonts.css" as="style"></noscript>
+
+    <script src="/assets/js/vendor/loadcss.min.js" defer></script>
+    <script src="/assets/js/vendor/fontfaceobserver.js" defer></script>
+    <script src="/assets/js/vendor/nonBlockingFont.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
+    <script src="/assets/js/docs.min.js" defer></script>
+    <script src="/assets/js/ie10-viewport-bug-workaround.js" defer></script>
 
     {% block head_extra %}{% endblock %}
 </head>
@@ -25,13 +23,7 @@
     {% block body %}{% endblock %}
     <!-- <script src="/assets/js/gulpScripts.js" ></script> -->
 
-    <script src="/assets/js/vendor/fontfaceobserver.js" ></script>
-    <script src="/assets/js/vendor/nonBlockingFont.js" ></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/assets/js/docs.min.js"></script>
-    <script src="/assets/js/ie10-viewport-bug-workaround.js"></script>
     {% block scripts_extra %}{% endblock %}
 </body>
 </html>
