--- a/src/getting-started/index.html
+++ b/src/getting-started/index.html
@@ -223,29 +223,54 @@
                 <h2 id="examples-framework">Using the framework</h2>
                 <div class="row bs-examples">
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/starter-template/"><img alt="Starter template example" src="../examples/screenshots/starter-template.jpg"></a>
+                        <a class="thumbnail" href="../examples/starter-template/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/starter-template.webp" type="image/webp"></source>
+                            <img alt="Starter template example" src="../examples/screenshots/starter-template.jpg">
+                          </picture>
+                        </a>
                         <h3>Starter template</h3>
                         <p>Nothing but the basics: compiled CSS and JavaScript along with a container.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/theme/"><img alt="Bootstrap theme example" src="../examples/screenshots/theme.jpg"></a>
+                        <a class="thumbnail" href="../examples/theme/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/theme.webp" type="image/webp"></source>
+                            <img alt="Bootstrap theme example" src="../examples/screenshots/theme.jpg">
+                          </picture>
+                        </a>
                         <h3>Bootstrap theme</h3>
                         <p>Load the optional Bootstrap theme for a visually enhanced experience.</p>
                     </div>
                     <div class="clearfix visible-xs"></div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/grid/"><img alt="Multiple grids example" src="../examples/screenshots/grid.jpg"></a>
+                        <a class="thumbnail" href="../examples/grid/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/grid.webp" type="image/webp"></source>
+                            <img alt="Multiple grids example" src="../examples/screenshots/grid.jpg">
+                          </picture>
+                        </a>
                         <h3>Grids</h3>
                         <p>Multiple examples of grid layouts with all four tiers, nesting, and more.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/jumbotron/"><img alt="Jumbotron example" src="../examples/screenshots/jumbotron.jpg"></a>
+                        <a class="thumbnail" href="../examples/jumbotron/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/jumbotron.webp" type="image/webp"></source>
+                            <img alt="Jumbotron example" src="../examples/screenshots/jumbotron.jpg">
+                          </picture>
+                        </a>
                         <h3>Jumbotron</h3>
                         <p>Build around the jumbotron with a navbar and some basic grid columns.</p>
                     </div>
                     <div class="clearfix visible-xs"></div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/jumbotron-narrow/"><img alt="Narrow jumbotron example" src="../examples/screenshots/jumbotron-narrow.jpg"></a>
+                        <a class="thumbnail" href="../examples/jumbotron-narrow/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/jumbotron-narrow.webp" type="image/webp"></source>
+                            <img alt="Narrow jumbotron example" src="../examples/screenshots/jumbotron-narrow.jpg">
+                          </picture>
+                        </a>
                         <h3>Narrow jumbotron</h3>
                         <p>Build a more custom page by narrowing the default container and jumbotron.</p>
                     </div>
@@ -253,18 +278,33 @@
                 <h2 id="examples-navbars">Navbars in action</h2>
                 <div class="row bs-examples">
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/navbar/"><img alt="Navbar example" src="../examples/screenshots/navbar.jpg"></a>
+                        <a class="thumbnail" href="../examples/navbar/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/navbar.webp" type="image/webp"></source>
+                            <img alt="Navbar example" src="../examples/screenshots/navbar.jpg">
+                          </picture>
+                        </a>
                         <h3>Navbar</h3>
                         <p>Super basic template that includes the navbar along with some additional content.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/navbar-static-top/"><img alt="Static top navbar example" src="../examples/screenshots/navbar-static.jpg"></a>
+                        <a class="thumbnail" href="../examples/navbar-static-top/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/navbar-static.webp" type="image/webp"></source>
+                            <img alt="Static top navbar example" src="../examples/screenshots/navbar-static.jpg">
+                          </picture>
+                        </a>
                         <h3>Static top navbar</h3>
                         <p>Super basic template with a static top navbar along with some additional content.</p>
                     </div>
                     <div class="clearfix visible-xs"></div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/navbar-fixed-top/"><img alt="Fixed navbar example" src="../examples/screenshots/navbar-fixed.jpg"></a>
+                        <a class="thumbnail" href="../examples/navbar-fixed-top/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/navbar-fixed.webp" type="image/webp"></source>
+                            <img alt="Fixed navbar example" src="../examples/screenshots/navbar-fixed.jpg">
+                          </picture>
+                        </a>
                         <h3>Fixed navbar</h3>
                         <p>Super basic template with a fixed top navbar along with some additional content.</p>
                     </div>
@@ -272,45 +312,85 @@
                 <h2 id="examples-custom">Custom components</h2>
                 <div class="row bs-examples">
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/cover/"><img alt="A one-page template example" src="../examples/screenshots/cover.jpg"></a>
+                        <a class="thumbnail" href="../examples/cover/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/cover.webp" type="image/webp"></source>
+                            <img alt="A one-page template example" src="../examples/screenshots/cover.jpg">
+                          </picture>
+                        </a>
                         <h3>Cover</h3>
                         <p>A one-page template for building simple and beautiful home pages.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/carousel/"><img alt="Carousel example" src="../examples/screenshots/carousel.jpg"></a>
+                        <a class="thumbnail" href="../examples/carousel/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/carousel.webp" type="image/webp"></source>
+                            <img alt="Carousel example" src="../examples/screenshots/carousel.jpg">
+                          </picture>
+                        </a>
                         <h3>Carousel</h3>
                         <p>Customize the navbar and carousel, then add some new components.</p>
                     </div>
                     <div class="clearfix visible-xs"></div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/blog/"><img alt="Blog layout example" src="../examples/screenshots/blog.jpg"></a>
+                        <a class="thumbnail" href="../examples/blog/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/blog.webp" type="image/webp"></source>
+                            <img alt="Blog layout example" src="../examples/screenshots/blog.jpg">
+                          </picture>
+                        </a>
                         <h3>Blog</h3>
                         <p>Simple two-column blog layout with custom navigation, header, and type.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/dashboard/"><img alt="Dashboard example" src="../examples/screenshots/dashboard.jpg"></a>
+                        <a class="thumbnail" href="../examples/dashboard/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/dashboard.webp" type="image/webp"></source>
+                            <img alt="Dashboard example" src="../examples/screenshots/dashboard.jpg">
+                          </picture>
+                        </a>
                         <h3>Dashboard</h3>
                         <p>Basic structure for an admin dashboard with fixed sidebar and navbar.</p>
                     </div>
                     <div class="clearfix visible-xs"></div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/signin/"><img alt="Sign-in page example" src="../examples/screenshots/sign-in.jpg"></a>
+                        <a class="thumbnail" href="../examples/signin/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/sign-in.webp" type="image/webp"></source>
+                            <img alt="Sign-in page example" src="../examples/screenshots/sign-in.jpg">
+                          </picture>
+                        </a>
                         <h3>Sign-in page</h3>
                         <p>Custom form layout and design for a simple sign in form.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/justified-nav/"><img alt="Justified nav example" src="../examples/screenshots/justified-nav.jpg"></a>
+                        <a class="thumbnail" href="../examples/justified-nav/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/justified-nav.webp" type="image/webp"></source>
+                            <img alt="Justified nav example" src="../examples/screenshots/justified-nav.jpg">
+                          </picture>
+                        </a>
                         <h3>Justified nav</h3>
                         <p>Create a custom navbar with justified links. Heads up! <a href="../components/#nav-justified">Not too Safari friendly.</a></p>
                     </div>
                     <div class="clearfix visible-xs"></div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/sticky-footer/"><img alt="Sticky footer example" src="../examples/screenshots/sticky-footer.jpg"></a>
+                        <a class="thumbnail" href="../examples/sticky-footer/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/sticky-footer.webp" type="image/webp"></source>
+                            <img alt="Sticky footer example" src="../examples/screenshots/sticky-footer.jpg">
+                          </picture>
+                        </a>
                         <h3>Sticky footer</h3>
                         <p>Attach a footer to the bottom of the viewport when the content is shorter than it.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/sticky-footer-navbar/"><img alt="Sticky footer with navbar example" src="../examples/screenshots/sticky-footer-navbar.jpg"></a>
+                        <a class="thumbnail" href="../examples/sticky-footer-navbar/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/sticky-footer-navbar.webp" type="image/webp"></source>
+                            <img alt="Sticky footer with navbar example" src="../examples/screenshots/sticky-footer-navbar.jpg">
+                          </picture>
+                        </a>
                         <h3>Sticky footer with navbar</h3>
                         <p>Attach a footer to the bottom of the viewport with a fixed navbar at the top.</p>
                     </div>
@@ -318,12 +398,22 @@
                 <h2 id="examples-experiments">Experiments</h2>
                 <div class="row bs-examples">
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/non-responsive/"><img alt="Non-responsive example" src="../examples/screenshots/non-responsive.jpg"></a>
+                        <a class="thumbnail" href="../examples/non-responsive/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/non-responsive.webp" type="image/webp"></source>
+                            <img alt="Non-responsive example" src="../examples/screenshots/non-responsive.jpg">
+                          </picture>
+                        </a>
                         <h3>Non-responsive Bootstrap</h3>
                         <p>Easily disable the responsiveness of Bootstrap <a href="#disable-responsive">per our docs</a>.</p>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <a class="thumbnail" href="../examples/offcanvas/"><img alt="Off-canvas navigation example" src="../examples/screenshots/offcanvas.jpg"></a>
+                        <a class="thumbnail" href="../examples/offcanvas/">
+                          <picture>
+                            <source srcset="/dist/img/examples/screenshots/offcanvas.webp" type="image/webp"></source>
+                            <img alt="Off-canvas navigation example" src="../examples/screenshots/offcanvas.jpg">
+                          </picture>
+                        </a>
                         <h3>Off-canvas</h3>
                         <p>Build a toggleable off-canvas navigation menu for use with Bootstrap.</p>
                     </div>
