--- a/src/_base/layout.html
+++ b/src/_base/layout.html
@@ -4,14 +4,14 @@
     {% include './app-meta.html' %}
 
     <style>{% include '../dist/css/critical.css' %}</style>
-    <script src="/assets/js/vendor/loadcss.min.js"></script>
-    <script defer type="text/javascript">loadCSS('/dist/css/fonts.css');</script>
-    <noscript><link rel="preload" href="/dist/css/fonts.css" as="style"></noscript>
 
+    <!-- <script defer type="text/javascript">loadCSS('/dist/css/fonts.css');</script> -->
+    <noscript><link rel="preload" href="/dist/css/fonts.css" as="style"></noscript>
+    <script defer src="/assets/js/vendor/loadcss.min.js"></script>
 
     <script src="/assets/js/vendor/fontfaceobserver.js" defer></script>
     <script src="/assets/js/vendor/nonBlockingFont.js" defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" defer></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer></script>
     <script src="/assets/js/docs.min.js" defer></script>
