--- a/src/_base/layout.html
+++ b/src/_base/layout.html
@@ -21,6 +21,7 @@
         <script defer>
             $(function() {
                 $("img.lazy").lazyload({
+                    threshold : 200
                     effect : "fadeIn"
                 });
             });
